[tool.poetry]
name = "mastobot"
version = "0.1.0"
description = "A simple bot that tracks dates for events."
authors = ["Pintman <pintman@0xabc.de>"]

[tool.poetry.dependencies]
python = "^3.9"
"Mastodon.py" = "^1.5.1"

[tool.poetry.dev-dependencies]
pylint = "^2.11.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
